force-app/main/default/objects/Ship_To__c/Ship_To__c.object-meta.xml
<CustomObject>
    <label>Ship To</label>
    <nameField>
        <label>Ship To Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ship To&#39;s</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>