force-app/main/default/objects/Ship_To__c/fields/ChannelGroup__c.field-meta.xml
<CustomField>
    <fullName>ChannelGroup__c</fullName>
    <label>Channel Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ChannelGroup</valueSetName>
    </valueSet>
</CustomField>