force-app/main/default/objects/Ship_To__c/fields/Chep_Id__c.field-meta.xml
<CustomField>
    <fullName>Chep_Id__c</fullName>
    <label>Chep Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>