force-app/main/default/objects/Ship_To__c/fields/CommercialAccountCountryCode__c.field-meta.xml
<CustomField>
    <fullName>CommercialAccountCountryCode__c</fullName>
    <formula>TEXT(Commercial_Account__r.CountryCode__c)</formula>
    <label>Commercial Account Country Code</label>
    <type>Text</type>
</CustomField>