force-app/main/default/objects/Ship_To__c/fields/CountyDescription__c.field-meta.xml
<CustomField>
    <fullName>CountyDescription__c</fullName>
    <label>County Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>