force-app/main/default/objects/Ship_To__c/fields/CreditLimit__c.field-meta.xml
<CustomField>
    <fullName>CreditLimit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Limit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Commercial_Account__c</field>
            <operation>equals</operation>
            <valueField>CreditLimit__c.CommercialAccount__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CreditLimit__c</referenceTo>
    <relationshipLabel>Ship To&#39;s</relationshipLabel>
    <relationshipName>Ship_To_s</relationshipName>
    <type>Lookup</type>
</CustomField>