force-app/main/default/objects/Ship_To__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <formula>text(Sold_To__r.Default_Currency__c)</formula>
    <label>Default Currency</label>
    <type>Text</type>
</CustomField>