force-app/main/default/objects/Ship_To__c/fields/CustomerGroup__c.field-meta.xml
<CustomField>
    <fullName>CustomerGroup__c</fullName>
    <label>Customer Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CustomerGroup</valueSetName>
    </valueSet>
</CustomField>