force-app/main/default/objects/Ship_To__c/fields/CustomerSubGroup2__c.field-meta.xml
<CustomField>
    <fullName>CustomerSubGroup2__c</fullName>
    <label>Customer Sub Group 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CustomerSubGroup__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>CustomerSubGroup2</valueSetName>
    </valueSet>
</CustomField>