force-app/main/default/objects/Ship_To__c/fields/CustomerSubGroup__c.field-meta.xml
<CustomField>
    <fullName>CustomerSubGroup__c</fullName>
    <label>Customer Sub Group</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CustomerGroup__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>CustomerSubGroup</valueSetName>
    </valueSet>
</CustomField>