force-app/main/default/objects/Ship_To__c/fields/DEFAULT_INCO_TERMS__c.field-meta.xml
<CustomField>
    <fullName>DEFAULT_INCO_TERMS__c</fullName>
    <label>DEFAULT INCO TERMS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>