force-app/main/default/objects/Ship_To__c/fields/Default_Plant__c.field-meta.xml
<CustomField>
    <fullName>Default_Plant__c</fullName>
    <label>Default Plant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>