force-app/main/default/objects/Ship_To__c/fields/DistributionChannel__c.field-meta.xml
<CustomField>
    <fullName>DistributionChannel__c</fullName>
    <label>Distribution Channel</label>
    <length>10</length>
    <type>Text</type>
</CustomField>