force-app/main/default/objects/Ship_To__c/fields/Division_Customer__c.field-meta.xml
<CustomField>
    <fullName>Division_Customer__c</fullName>
    <label>Division Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>