force-app/main/default/objects/Ship_To__c/fields/ExtraInformation__c.field-meta.xml
<CustomField>
    <fullName>ExtraInformation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Extra Information</label>
    <referenceTo>ExtraInformation__c</referenceTo>
    <relationshipLabel>Ship To&#39;s</relationshipLabel>
    <relationshipName>Ship_To_s</relationshipName>
    <type>Lookup</type>
</CustomField>