force-app/main/default/objects/Ship_To__c/fields/Global_Account__c.field-meta.xml
<CustomField>
    <fullName>Global_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Global Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ship To&#39;s</relationshipLabel>
    <relationshipName>Ship_To_s2</relationshipName>
    <type>Lookup</type>
</CustomField>