force-app/main/default/objects/Ship_To__c/fields/HasEquipment__c.field-meta.xml
<CustomField>
    <fullName>HasEquipment__c</fullName>
    <label>Has Equipment</label>
    <length>10</length>
    <type>Text</type>
</CustomField>