force-app/main/default/objects/Ship_To__c/fields/IdentificationNumber__c.field-meta.xml
<CustomField>
    <fullName>IdentificationNumber__c</fullName>
    <label>Identification Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>