force-app/main/default/objects/Ship_To__c/fields/Legacy_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Id__c</fullName>
    <label>Legacy Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>