force-app/main/default/objects/Ship_To__c/fields/LegalName__c.field-meta.xml
<CustomField>
    <fullName>LegalName__c</fullName>
    <label>Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>