force-app/main/default/objects/Ship_To__c/fields/Payer__c.field-meta.xml
<CustomField>
    <fullName>Payer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Payer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ship To&#39;s</relationshipLabel>
    <relationshipName>Ship_To_s</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>