force-app/main/default/objects/Ship_To__c/fields/Phone2__c.field-meta.xml
<CustomField>
    <fullName>Phone2__c</fullName>
    <label>Phone 2</label>
    <type>Phone</type>
</CustomField>