force-app/main/default/objects/Ship_To__c/fields/PlantRoute__c.field-meta.xml
<CustomField>
    <fullName>PlantRoute__c</fullName>
    <label>Plant Route</label>
    <length>50</length>
    <type>Text</type>
</CustomField>