force-app/main/default/objects/Ship_To__c/fields/PlantRouteDescription__c.field-meta.xml
<CustomField>
    <fullName>PlantRouteDescription__c</fullName>
    <label>Plant Route Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>