force-app/main/default/objects/Ship_To__c/fields/PrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>PrimaryContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ship To&#39;s</relationshipLabel>
    <relationshipName>Ship_To_s</relationshipName>
    <type>Lookup</type>
</CustomField>