force-app/main/default/objects/Ship_To__c/fields/SalesArea__c.field-meta.xml
<CustomField>
    <fullName>SalesArea__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Area</label>
    <referenceTo>SalesArea__c</referenceTo>
    <relationshipLabel>Ship To&#39;s</relationshipLabel>
    <relationshipName>Ship_To_s</relationshipName>
    <type>Lookup</type>
</CustomField>