force-app/main/default/objects/Ship_To__c/fields/SalesAreaCountry__c.field-meta.xml
<CustomField>
    <fullName>SalesAreaCountry__c</fullName>
    <formula>SalesArea__r.SalesOrg__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Area Country</label>
    <type>Text</type>
</CustomField>