force-app/main/default/objects/Ship_To__c/fields/SalesAreaNumber__c.field-meta.xml
<CustomField>
    <fullName>SalesAreaNumber__c</fullName>
    <formula>SalesArea__r.SalesAreaNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Area Number</label>
    <type>Text</type>
</CustomField>