force-app/main/default/objects/Ship_To__c/fields/SellerCode__c.field-meta.xml
<CustomField>
    <fullName>SellerCode__c</fullName>
    <label>Seller Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>