force-app/main/default/objects/Ship_To__c/fields/SHIP_TO_STATE_BKT__c.field-meta.xml
<CustomField>
    <fullName>SHIP_TO_STATE_BKT__c</fullName>
    <label>SHIP TO STATE BKT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>