force-app/main/default/objects/Ship_To__c/fields/Sold_To__c.field-meta.xml
<CustomField>
    <fullName>Sold_To__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sold To</label>
    <referenceTo>Bill_To__c</referenceTo>
    <relationshipLabel>Ship To&#39;s</relationshipLabel>
    <relationshipName>Ship_To_s</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>