force-app/main/default/objects/Ship_To__c/fields/Universal_Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Universal_Ship_To__c</fullName>
    <label>Universal Ship To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>