force-app/main/default/objects/Ship_To__c/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <label>Zone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>