force-app/main/default/objects/Ship_To__c/listViews/My_Ship_To_s_Team.listView-meta.xml
<ListView>
    <fullName>My_Ship_To_s_Team</fullName>
    <columns>NAME</columns>
    <columns>ERP_Number__c</columns>
    <columns>Commercial_Account__c</columns>
    <columns>Payer__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Ship To&#39;s Team</label>
    <language>en_US</language>
</ListView>