force-app/main/default/objects/Ship_To__c/listViews/MyShipTos.listView-meta.xml
<ListView>
    <fullName>MyShipTos</fullName>
    <columns>NAME</columns>
    <columns>ERP_Number__c</columns>
    <columns>Commercial_Account__c</columns>
    <columns>Payer__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Ship To&#39;s</label>
    <language>en_US</language>
</ListView>