force-app/main/default/objects/Ship_To__c/listViews/ShipTosDeColombia.listView-meta.xml
<ListView>
    <fullName>ShipTosDeColombia</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>Colombia</value>
    </filters>
    <label>Ship To&#39;s De Colombia</label>
</ListView>