force-app/main/default/objects/Ship_To__c/listViews/ShipTosDeCostaRica.listView-meta.xml
<ListView>
    <fullName>ShipTosDeCostaRica</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>Costa Rica</value>
    </filters>
    <label>Ship To&#39;s De Costa Rica</label>
</ListView>