force-app/main/default/objects/Ship_To__c/listViews/ShipTosDeGuatemala.listView-meta.xml
<ListView>
    <fullName>ShipTosDeGuatemala</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>Guatemala</value>
    </filters>
    <label>Ship To&#39;s De Guatemala</label>
</ListView>