force-app/main/default/objects/Ship_To__c/listViews/ShipTosDeHonduras.listView-meta.xml
<ListView>
    <fullName>ShipTosDeHonduras</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>Honduras</value>
    </filters>
    <label>Ship To&#39;s De Honduras</label>
</ListView>