force-app/main/default/objects/Ship_To__c/listViews/ShipTosDeNicaragua.listView-meta.xml
<ListView>
    <fullName>ShipTosDeNicaragua</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>Nicaragua</value>
    </filters>
    <label>Ship To&#39;s De Nicaragua</label>
</ListView>